tests/baselines/reference/customMetadataDecorator.importedNamespace.3.errors.txt
tests/cases/conformance/decorators/decoratorMetadata/main.ts(1,1): error TS1434: Unable to resolve signature of implicit decorator 'Reflect.metadata' from module 'foo' when called as an expression.
  Namespace 'Reflect' from module 'foo' has no exported member 'metadata'.


==== tests/cases/conformance/decorators/decoratorMetadata/global.d.ts (0 errors) ====
    declare module "foo" {
        namespace Reflect {
            const _: any;
        }
    }
    declare const dec: any;
==== tests/cases/conformance/decorators/decoratorMetadata/main.ts (1 errors) ====
    @dec
    ~~~~
!!! error TS1434: Unable to resolve signature of implicit decorator 'Reflect.metadata' from module 'foo' when called as an expression.
!!! error TS1434:   Namespace 'Reflect' from module 'foo' has no exported member 'metadata'.
    class C {
        @dec x!: number;
    
        constructor(x: number) {}
    
        @dec
        method(@dec x: number): string { return ""; }
    
        @dec
        get accessor(): string { return ""; }
    }
    export {};